--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
 <body>
 
   <div class="container">
-    asd
+    <!-- SITE-HEADER -->
+    <header class="site-header">
+      <!-- SITE-HEADER-TOP -->
+      <div class="site-header__top">
+        <div class="site-header__contacts">
+          <a class="site-header__chat-link" href="#">Chat with us</a>
+          <a class="site-header__phone" href="tel:+420336775664">+420 336 775 664</a>
+          <a class="site-header__email" href="mailto:info@freshnesecom.com">info@freshnesecom.com</a>
+        </div>
+
+        <ul class="site-header__top-nav">
+          <li class="site-header__top-nav-item">
+            <a class="site-header__top-nav-link" href="#">Blog</a>
+          </li>
+          <li class="site-header__top-nav-item">
+            <a class="site-header__top-nav-link" href="#">About us</a>
+          </li>
+          <li class="site-header__top-nav-item">
+            <a class="site-header__top-nav-link" href="#">Careers</a>
+          </li>
+        </ul>
+      </div>
+    </header>
   </div>
 
   <script src="js/main.js"></script>
