--- a/index.html
+++ b/index.html
@@ -33,6 +33,40 @@
           </li>
         </ul>
       </div>
+
+      <!-- SITE-HEADER-MIDDLE -->
+      <div class="site-header__middle">
+        <a class="site-header__logo logo" href="index.html">
+          <img class="logo__img" src="img/logo.svg" alt="Freshnesecom logo" width="177" height="50">
+        </a>
+
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
+          <div class="search-form__select-wrapper">
+            <select class="search-form__select" name="category" aria-label="Category">
+              <option value="all">All categories</option>
+              <option value="bakery">Bakery</option>
+              <option value="fruit_vegetable">Fruit and vegetables</option>
+              <option value="meat">Meat and fish</option>
+              <option value="drinks">Drinks</option>
+              <option value="kitchen">Kitchen</option>
+              <option value="special">Special nutrition</option>
+              <option value="baby">Baby</option>
+              <option value="pharmacy">Pharmacy</option>
+            </select>
+          </div>
+          <input class="search-form__input" type="search" name="search" aria-label="Search" placeholder="Search Products, categories ..." required>
+        </form>
+
+        <div class="site-header__user-actions">
+          <a class="site-header__action-link" href="#" aria-label="Profile">
+            <svg class="site-header__action-icon" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 22l.79-2.88c2.61-9.5 13.81-9.5 16.42 0L21 22" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 11.98a5 5 0 100-10 5 5 0 000 10z" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="bevel"/></svg>
+          </a>
+          <a class="site-header__action-link" href="#" aria-label="Shopping cart">
+            <svg class="site-header__action-icon" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.89 20.85H6.11a1.42 1.42 0 01-1.38-1.08L2.08 9.16a.7.7 0 01.68-.87h18.48a.7.7 0 01.68.87l-2.65 10.61a1.42 1.42 0 01-1.38 1.08v0zM9.8 3.15L6.9 8.29M13.88 3.15l2.91 5.14" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            <span class="site-header__cart-content-count">4</span>
+          </a>
+        </div>
+      </div>
     </header>
   </div>
 
