--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         </form>
 
         <div class="site-header__user-actions">
+          <a class="site-header__action-link site-header__action-link--search-toggle js-search-modal-toggler" href="search.html" aria-label="Search">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" fill="currentColor"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>
+          </a>
           <a class="site-header__action-link" href="#" aria-label="Profile">
             <svg class="site-header__action-icon" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 22l.79-2.88c2.61-9.5 13.81-9.5 16.42 0L21 22" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 11.98a5 5 0 100-10 5 5 0 000 10z" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="bevel"/></svg>
           </a>
@@ -69,6 +72,17 @@
       </div>
     </header>
   </div>
+
+
+  <!-- MODALS -->
+  <section class="search-modal modal">
+    <div class="modal__dialog">
+      <form class="search-modal__form" action="https://echo.htmlacademy.ru" method="GET">
+        <input class="search-modal__field" type="search" name="search" aria-label="Search" placeholder="Search" required>
+      </form>
+    </div>
+  </section>
+
 
   <script src="js/main.js"></script>
 </body>
